Added hint to release howto to work around Maven Java 17 issue.